Fix Quilt incompatibility #482 (#484)
* Was the fix THAT simple?

* Remove unused imports.

* Move new import to it's friends.

Co-authored-by: Szczurek <kamilsecret8@gmai.com>